--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@
 }
 
 button {
-    height: 1.5em;
+    height: 2em;
+    width: 2em;
     margin: 0.1em;
     border-radius: 0.1em;
     border: none;
